fixed spacing issue on footer

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -15,12 +15,12 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 30px;
   background-color: black;
   color: white;
   font-size: 15px;
   text-align: center;
   padding-top: 10px;
+  padding-bottom: 10px;
 }
 @font-face {
   font-family: heading;
